--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_map" />
-        <activity android:name=".MarkerInfoActivity"></activity>
+        <activity android:name=".MarkerInfoActivity" />
+        <activity android:name=".MarkerPage"></activity>
     </application>
 
 </manifest>
